--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "client-gateway"]
 	path = client-gateway
 	url = https://github.com/Online-Store-Microservices/client-gateway.git
+[submodule "products-ms"]
+	path = products-ms
+	url = https://github.com/Online-Store-Microservices/products-ms.git
+[submodule "orders-ms"]
+	path = orders-ms
+	url = https://github.com/Online-Store-Microservices/orders-ms.git
