--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "orders-ms"]
 	path = orders-ms
 	url = https://github.com/Online-Store-Microservices/orders-ms.git
+[submodule "payments-ms"]
+	path = payments-ms
+	url = https://github.com/Online-Store-Microservices/payments-ms.git
